# building-with-the-claude-api-course

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/01-accessing-claude-with-the-api/: 02_multi_turn_conversations.ipynb  04_temperature.ipynb  05_response_streaming.ipynb  06_structured_data.ipynb
notebooks/01-basics/: 01_accessing_claude_with_the_api.ipynb  01_first_api_call.ipynb  03_system_prompts.ipynb  04_temperature.ipynb
notebooks/02-prompt-evaluation/: 01_prompt_evaluation_general.ipynb  02_generating_test_datasets.ipynb  03_running_the_eval.ipynb  04_model_based_grading.ipynb  05_code_based_grading.ipynb  06_exercise_on_prompt_evals.ipynb  dataset.json
notebooks/03-prompt-engineering/: 01_prompt_engineering.ipynb  02_be_clear_and_direct.ipynb  03_be_specific.ipynb  04_structure_with_xml_tags.ipynb  05_providing_examples.ipynb  06_exercise_on_prompting.ipynb  dataset.json  dataset_exercise.json  output.html  output.json  output_exercise.html  output_exercise.json
notebooks/04-tool-use/: 01_tool_use_intro.ipynb  02_project_overview.ipynb  03_tool_functions.ipynb  04_tool_schemas.ipynb  05_handling_message_blocks.ipynb  06_sending_tool_results.ipynb  07_multi_turn_conversations_with_tools.ipynb  08_implementing_multiple_turn.ipynb  09_using_multiple_tools.ipynb  10_fine_grained_tool_calling.ipynb  11_text_editor_tool.ipynb  12_web_search_tool.ipynb  main.py  test.py
resources/: cheatsheet-examen.md
src/: features_claude.py  prompt_evaluation.py  rag.py  text_editor_tool.py  tool_use.py  utils.py
(+29 files in other folders)
