[project]
name = "building-with-the-claude-api-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "voyageai>=0.3.7",
]
